# demo-ci-fastapi

./: README.rst  pyproject.toml
.github/workflows/: python-package.yml
demo_ci_fastapi/: web_api.py
tests/: test_demo_ci_fastapi.py  test_web_api.py
