[tool.poetry]
name = "demo-ci-fastapi"
version = "0.1.0"
description = ""
authors = ["nicolas <42466785+FellowNico@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
